// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthIndicator renders envoy failure 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthIndicator
    health={
      AppHealth {
        "envoy": Object {
          "healthy": 0,
          "total": 10,
        },
        "items": Array [
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#ec7a08",
                  "icon": "warning-triangle-o",
                  "name": "Degraded",
                  "priority": 2,
                },
                "text": "A: 1 / 10",
              },
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "B: 2 / 2",
              },
            ],
            "report": "Pod workload degraded",
            "status": Object {
              "color": "#ec7a08",
              "icon": "warning-triangle-o",
              "name": "Degraded",
              "priority": 2,
            },
            "title": "Workload Status",
          },
          Object {
            "report": "Envoy health failure",
            "status": Object {
              "color": "#cc0000",
              "icon": "error-circle-o",
              "name": "Failure",
              "priority": 3,
            },
            "text": "0 / 10",
            "title": "Envoy Health",
          },
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "text": "Inbound: No requests",
              },
              Object {
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "text": "Outbound: No requests",
              },
            ],
            "status": Object {
              "color": "#72767b",
              "name": "No health information",
              "priority": 0,
              "text": "N/A",
            },
            "title": "Error Rate over last 10 min",
          },
        ],
        "rateInterval": 600,
        "requests": Object {
          "errorRatio": -1,
          "inboundErrorRatio": -1,
          "outboundErrorRatio": -1,
        },
        "workloadStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 10,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
      }
    }
    id="svc"
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <HealthDetails
        headline="Failure"
        health={
          AppHealth {
            "envoy": Object {
              "healthy": 0,
              "total": 10,
            },
            "items": Array [
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#ec7a08",
                      "icon": "warning-triangle-o",
                      "name": "Degraded",
                      "priority": 2,
                    },
                    "text": "A: 1 / 10",
                  },
                  Object {
                    "status": Object {
                      "color": "#3f9c35",
                      "icon": "ok",
                      "name": "Healthy",
                      "priority": 1,
                    },
                    "text": "B: 2 / 2",
                  },
                ],
                "report": "Pod workload degraded",
                "status": Object {
                  "color": "#ec7a08",
                  "icon": "warning-triangle-o",
                  "name": "Degraded",
                  "priority": 2,
                },
                "title": "Workload Status",
              },
              Object {
                "report": "Envoy health failure",
                "status": Object {
                  "color": "#cc0000",
                  "icon": "error-circle-o",
                  "name": "Failure",
                  "priority": 3,
                },
                "text": "0 / 10",
                "title": "Envoy Health",
              },
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Inbound: No requests",
                  },
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Outbound: No requests",
                  },
                ],
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "title": "Error Rate over last 10 min",
              },
            ],
            "rateInterval": 600,
            "requests": Object {
              "errorRatio": -1,
              "inboundErrorRatio": -1,
              "outboundErrorRatio": -1,
            },
            "workloadStatuses": Array [
              Object {
                "available": 1,
                "name": "A",
                "replicas": 10,
              },
              Object {
                "available": 2,
                "name": "B",
                "replicas": 2,
              },
            ],
          }
        }
        id="svc"
        placement={undefined}
      >
        <Icon
          className="health-icon"
          name="error-circle-o"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          tabIndex="0"
          type="pf"
        />
      </HealthDetails>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Icon
          className="health-icon"
          name="error-circle-o"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          tabIndex="0"
          type="pf"
        />,
        "headline": "Failure",
        "health": AppHealth {
          "envoy": Object {
            "healthy": 0,
            "total": 10,
          },
          "items": Array [
            Object {
              "children": Array [
                Object {
                  "status": Object {
                    "color": "#ec7a08",
                    "icon": "warning-triangle-o",
                    "name": "Degraded",
                    "priority": 2,
                  },
                  "text": "A: 1 / 10",
                },
                Object {
                  "status": Object {
                    "color": "#3f9c35",
                    "icon": "ok",
                    "name": "Healthy",
                    "priority": 1,
                  },
                  "text": "B: 2 / 2",
                },
              ],
              "report": "Pod workload degraded",
              "status": Object {
                "color": "#ec7a08",
                "icon": "warning-triangle-o",
                "name": "Degraded",
                "priority": 2,
              },
              "title": "Workload Status",
            },
            Object {
              "report": "Envoy health failure",
              "status": Object {
                "color": "#cc0000",
                "icon": "error-circle-o",
                "name": "Failure",
                "priority": 3,
              },
              "text": "0 / 10",
              "title": "Envoy Health",
            },
            Object {
              "children": Array [
                Object {
                  "status": Object {
                    "color": "#72767b",
                    "name": "No health information",
                    "priority": 0,
                    "text": "N/A",
                  },
                  "text": "Inbound: No requests",
                },
                Object {
                  "status": Object {
                    "color": "#72767b",
                    "name": "No health information",
                    "priority": 0,
                    "text": "N/A",
                  },
                  "text": "Outbound: No requests",
                },
              ],
              "status": Object {
                "color": "#72767b",
                "name": "No health information",
                "priority": 0,
                "text": "N/A",
              },
              "title": "Error Rate over last 10 min",
            },
          ],
          "rateInterval": 600,
          "requests": Object {
            "errorRatio": -1,
            "inboundErrorRatio": -1,
            "outboundErrorRatio": -1,
          },
          "workloadStatuses": Array [
            Object {
              "available": 1,
              "name": "A",
              "replicas": 10,
            },
            Object {
              "available": 2,
              "name": "B",
              "replicas": 2,
            },
          ],
        },
        "id": "svc",
        "placement": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "health-icon",
          "name": "error-circle-o",
          "style": Object {
            "fontSize": "18px",
          },
          "tabIndex": "0",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <HealthDetails
          headline="Failure"
          health={
            AppHealth {
              "envoy": Object {
                "healthy": 0,
                "total": 10,
              },
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "color": "#ec7a08",
                        "icon": "warning-triangle-o",
                        "name": "Degraded",
                        "priority": 2,
                      },
                      "text": "A: 1 / 10",
                    },
                    Object {
                      "status": Object {
                        "color": "#3f9c35",
                        "icon": "ok",
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "report": "Pod workload degraded",
                  "status": Object {
                    "color": "#ec7a08",
                    "icon": "warning-triangle-o",
                    "name": "Degraded",
                    "priority": 2,
                  },
                  "title": "Workload Status",
                },
                Object {
                  "report": "Envoy health failure",
                  "status": Object {
                    "color": "#cc0000",
                    "icon": "error-circle-o",
                    "name": "Failure",
                    "priority": 3,
                  },
                  "text": "0 / 10",
                  "title": "Envoy Health",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "color": "#72767b",
                        "name": "No health information",
                        "priority": 0,
                        "text": "N/A",
                      },
                      "text": "Inbound: No requests",
                    },
                    Object {
                      "status": Object {
                        "color": "#72767b",
                        "name": "No health information",
                        "priority": 0,
                        "text": "N/A",
                      },
                      "text": "Outbound: No requests",
                    },
                  ],
                  "status": Object {
                    "color": "#72767b",
                    "name": "No health information",
                    "priority": 0,
                    "text": "N/A",
                  },
                  "title": "Error Rate over last 10 min",
                },
              ],
              "rateInterval": 600,
              "requests": Object {
                "errorRatio": -1,
                "inboundErrorRatio": -1,
                "outboundErrorRatio": -1,
              },
              "workloadStatuses": Array [
                Object {
                  "available": 1,
                  "name": "A",
                  "replicas": 10,
                },
                Object {
                  "available": 2,
                  "name": "B",
                  "replicas": 2,
                },
              ],
            }
          }
          id="svc"
          placement={undefined}
        >
          <Icon
            className="health-icon"
            name="error-circle-o"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            tabIndex="0"
            type="pf"
          />
        </HealthDetails>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Icon
            className="health-icon"
            name="error-circle-o"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            tabIndex="0"
            type="pf"
          />,
          "headline": "Failure",
          "health": AppHealth {
            "envoy": Object {
              "healthy": 0,
              "total": 10,
            },
            "items": Array [
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#ec7a08",
                      "icon": "warning-triangle-o",
                      "name": "Degraded",
                      "priority": 2,
                    },
                    "text": "A: 1 / 10",
                  },
                  Object {
                    "status": Object {
                      "color": "#3f9c35",
                      "icon": "ok",
                      "name": "Healthy",
                      "priority": 1,
                    },
                    "text": "B: 2 / 2",
                  },
                ],
                "report": "Pod workload degraded",
                "status": Object {
                  "color": "#ec7a08",
                  "icon": "warning-triangle-o",
                  "name": "Degraded",
                  "priority": 2,
                },
                "title": "Workload Status",
              },
              Object {
                "report": "Envoy health failure",
                "status": Object {
                  "color": "#cc0000",
                  "icon": "error-circle-o",
                  "name": "Failure",
                  "priority": 3,
                },
                "text": "0 / 10",
                "title": "Envoy Health",
              },
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Inbound: No requests",
                  },
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Outbound: No requests",
                  },
                ],
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "title": "Error Rate over last 10 min",
              },
            ],
            "rateInterval": 600,
            "requests": Object {
              "errorRatio": -1,
              "inboundErrorRatio": -1,
              "outboundErrorRatio": -1,
            },
            "workloadStatuses": Array [
              Object {
                "available": 1,
                "name": "A",
                "replicas": 10,
              },
              Object {
                "available": 2,
                "name": "B",
                "replicas": 2,
              },
            ],
          },
          "id": "svc",
          "placement": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "health-icon",
            "name": "error-circle-o",
            "style": Object {
              "fontSize": "18px",
            },
            "tabIndex": "0",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`HealthIndicator renders envoy failure 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthIndicator
    health={
      AppHealth {
        "envoy": Object {
          "healthy": 0,
          "total": 10,
        },
        "items": Array [
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#ec7a08",
                  "icon": "warning-triangle-o",
                  "name": "Degraded",
                  "priority": 2,
                },
                "text": "A: 1 / 10",
              },
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "B: 2 / 2",
              },
            ],
            "report": "Pod workload degraded",
            "status": Object {
              "color": "#ec7a08",
              "icon": "warning-triangle-o",
              "name": "Degraded",
              "priority": 2,
            },
            "title": "Workload Status",
          },
          Object {
            "report": "Envoy health failure",
            "status": Object {
              "color": "#cc0000",
              "icon": "error-circle-o",
              "name": "Failure",
              "priority": 3,
            },
            "text": "0 / 10",
            "title": "Envoy Health",
          },
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "text": "Inbound: No requests",
              },
              Object {
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "text": "Outbound: No requests",
              },
            ],
            "status": Object {
              "color": "#72767b",
              "name": "No health information",
              "priority": 0,
              "text": "N/A",
            },
            "title": "Error Rate over last 10 min",
          },
        ],
        "rateInterval": 600,
        "requests": Object {
          "errorRatio": -1,
          "inboundErrorRatio": -1,
          "outboundErrorRatio": -1,
        },
        "workloadStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 10,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
      }
    }
    id="svc"
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <HealthDetails
          headline="Failure"
          health={
            AppHealth {
              "envoy": Object {
                "healthy": 0,
                "total": 10,
              },
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "color": "#ec7a08",
                        "icon": "warning-triangle-o",
                        "name": "Degraded",
                        "priority": 2,
                      },
                      "text": "A: 1 / 10",
                    },
                    Object {
                      "status": Object {
                        "color": "#3f9c35",
                        "icon": "ok",
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "report": "Pod workload degraded",
                  "status": Object {
                    "color": "#ec7a08",
                    "icon": "warning-triangle-o",
                    "name": "Degraded",
                    "priority": 2,
                  },
                  "title": "Workload Status",
                },
                Object {
                  "report": "Envoy health failure",
                  "status": Object {
                    "color": "#cc0000",
                    "icon": "error-circle-o",
                    "name": "Failure",
                    "priority": 3,
                  },
                  "text": "0 / 10",
                  "title": "Envoy Health",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "color": "#72767b",
                        "name": "No health information",
                        "priority": 0,
                        "text": "N/A",
                      },
                      "text": "Inbound: No requests",
                    },
                    Object {
                      "status": Object {
                        "color": "#72767b",
                        "name": "No health information",
                        "priority": 0,
                        "text": "N/A",
                      },
                      "text": "Outbound: No requests",
                    },
                  ],
                  "status": Object {
                    "color": "#72767b",
                    "name": "No health information",
                    "priority": 0,
                    "text": "N/A",
                  },
                  "title": "Error Rate over last 10 min",
                },
              ],
              "rateInterval": 600,
              "requests": Object {
                "errorRatio": -1,
                "inboundErrorRatio": -1,
                "outboundErrorRatio": -1,
              },
              "workloadStatuses": Array [
                Object {
                  "available": 1,
                  "name": "A",
                  "replicas": 10,
                },
                Object {
                  "available": 2,
                  "name": "B",
                  "replicas": 2,
                },
              ],
            }
          }
          id="svc"
          placement={undefined}
        >
          <Icon
            className="health-icon"
            name="error-circle-o"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            tabIndex="0"
            type="pf"
          />
        </HealthDetails>,
        <br />,
        false,
        <ul
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <li>
            Pod workload degraded
          </li>
          <li>
            Envoy health failure
          </li>
        </ul>,
      ],
      "style": Object {
        "color": "#cc0000",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Icon
            className="health-icon"
            name="error-circle-o"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            tabIndex="0"
            type="pf"
          />,
          "headline": "Failure",
          "health": AppHealth {
            "envoy": Object {
              "healthy": 0,
              "total": 10,
            },
            "items": Array [
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#ec7a08",
                      "icon": "warning-triangle-o",
                      "name": "Degraded",
                      "priority": 2,
                    },
                    "text": "A: 1 / 10",
                  },
                  Object {
                    "status": Object {
                      "color": "#3f9c35",
                      "icon": "ok",
                      "name": "Healthy",
                      "priority": 1,
                    },
                    "text": "B: 2 / 2",
                  },
                ],
                "report": "Pod workload degraded",
                "status": Object {
                  "color": "#ec7a08",
                  "icon": "warning-triangle-o",
                  "name": "Degraded",
                  "priority": 2,
                },
                "title": "Workload Status",
              },
              Object {
                "report": "Envoy health failure",
                "status": Object {
                  "color": "#cc0000",
                  "icon": "error-circle-o",
                  "name": "Failure",
                  "priority": 3,
                },
                "text": "0 / 10",
                "title": "Envoy Health",
              },
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Inbound: No requests",
                  },
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Outbound: No requests",
                  },
                ],
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "title": "Error Rate over last 10 min",
              },
            ],
            "rateInterval": 600,
            "requests": Object {
              "errorRatio": -1,
              "inboundErrorRatio": -1,
              "outboundErrorRatio": -1,
            },
            "workloadStatuses": Array [
              Object {
                "available": 1,
                "name": "A",
                "replicas": 10,
              },
              Object {
                "available": 2,
                "name": "B",
                "replicas": 2,
              },
            ],
          },
          "id": "svc",
          "placement": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "health-icon",
            "name": "error-circle-o",
            "style": Object {
              "fontSize": "35px",
            },
            "tabIndex": "0",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              Pod workload degraded
            </li>,
            <li>
              Envoy health failure
            </li>,
          ],
          "style": Object {
            "padding": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": "Pod workload degraded",
            },
            "ref": null,
            "rendered": "Pod workload degraded",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "Envoy health failure",
            },
            "ref": null,
            "rendered": "Envoy health failure",
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <HealthDetails
            headline="Failure"
            health={
              AppHealth {
                "envoy": Object {
                  "healthy": 0,
                  "total": 10,
                },
                "items": Array [
                  Object {
                    "children": Array [
                      Object {
                        "status": Object {
                          "color": "#ec7a08",
                          "icon": "warning-triangle-o",
                          "name": "Degraded",
                          "priority": 2,
                        },
                        "text": "A: 1 / 10",
                      },
                      Object {
                        "status": Object {
                          "color": "#3f9c35",
                          "icon": "ok",
                          "name": "Healthy",
                          "priority": 1,
                        },
                        "text": "B: 2 / 2",
                      },
                    ],
                    "report": "Pod workload degraded",
                    "status": Object {
                      "color": "#ec7a08",
                      "icon": "warning-triangle-o",
                      "name": "Degraded",
                      "priority": 2,
                    },
                    "title": "Workload Status",
                  },
                  Object {
                    "report": "Envoy health failure",
                    "status": Object {
                      "color": "#cc0000",
                      "icon": "error-circle-o",
                      "name": "Failure",
                      "priority": 3,
                    },
                    "text": "0 / 10",
                    "title": "Envoy Health",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "status": Object {
                          "color": "#72767b",
                          "name": "No health information",
                          "priority": 0,
                          "text": "N/A",
                        },
                        "text": "Inbound: No requests",
                      },
                      Object {
                        "status": Object {
                          "color": "#72767b",
                          "name": "No health information",
                          "priority": 0,
                          "text": "N/A",
                        },
                        "text": "Outbound: No requests",
                      },
                    ],
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "title": "Error Rate over last 10 min",
                  },
                ],
                "rateInterval": 600,
                "requests": Object {
                  "errorRatio": -1,
                  "inboundErrorRatio": -1,
                  "outboundErrorRatio": -1,
                },
                "workloadStatuses": Array [
                  Object {
                    "available": 1,
                    "name": "A",
                    "replicas": 10,
                  },
                  Object {
                    "available": 2,
                    "name": "B",
                    "replicas": 2,
                  },
                ],
              }
            }
            id="svc"
            placement={undefined}
          >
            <Icon
              className="health-icon"
              name="error-circle-o"
              style={
                Object {
                  "fontSize": "35px",
                }
              }
              tabIndex="0"
              type="pf"
            />
          </HealthDetails>,
          <br />,
          false,
          <ul
            style={
              Object {
                "padding": 0,
              }
            }
          >
            <li>
              Pod workload degraded
            </li>
            <li>
              Envoy health failure
            </li>
          </ul>,
        ],
        "style": Object {
          "color": "#cc0000",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Icon
              className="health-icon"
              name="error-circle-o"
              style={
                Object {
                  "fontSize": "35px",
                }
              }
              tabIndex="0"
              type="pf"
            />,
            "headline": "Failure",
            "health": AppHealth {
              "envoy": Object {
                "healthy": 0,
                "total": 10,
              },
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "color": "#ec7a08",
                        "icon": "warning-triangle-o",
                        "name": "Degraded",
                        "priority": 2,
                      },
                      "text": "A: 1 / 10",
                    },
                    Object {
                      "status": Object {
                        "color": "#3f9c35",
                        "icon": "ok",
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "report": "Pod workload degraded",
                  "status": Object {
                    "color": "#ec7a08",
                    "icon": "warning-triangle-o",
                    "name": "Degraded",
                    "priority": 2,
                  },
                  "title": "Workload Status",
                },
                Object {
                  "report": "Envoy health failure",
                  "status": Object {
                    "color": "#cc0000",
                    "icon": "error-circle-o",
                    "name": "Failure",
                    "priority": 3,
                  },
                  "text": "0 / 10",
                  "title": "Envoy Health",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "color": "#72767b",
                        "name": "No health information",
                        "priority": 0,
                        "text": "N/A",
                      },
                      "text": "Inbound: No requests",
                    },
                    Object {
                      "status": Object {
                        "color": "#72767b",
                        "name": "No health information",
                        "priority": 0,
                        "text": "N/A",
                      },
                      "text": "Outbound: No requests",
                    },
                  ],
                  "status": Object {
                    "color": "#72767b",
                    "name": "No health information",
                    "priority": 0,
                    "text": "N/A",
                  },
                  "title": "Error Rate over last 10 min",
                },
              ],
              "rateInterval": 600,
              "requests": Object {
                "errorRatio": -1,
                "inboundErrorRatio": -1,
                "outboundErrorRatio": -1,
              },
              "workloadStatuses": Array [
                Object {
                  "available": 1,
                  "name": "A",
                  "replicas": 10,
                },
                Object {
                  "available": 2,
                  "name": "B",
                  "replicas": 2,
                },
              ],
            },
            "id": "svc",
            "placement": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "health-icon",
              "name": "error-circle-o",
              "style": Object {
                "fontSize": "35px",
              },
              "tabIndex": "0",
              "type": "pf",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                Pod workload degraded
              </li>,
              <li>
                Envoy health failure
              </li>,
            ],
            "style": Object {
              "padding": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": "Pod workload degraded",
              },
              "ref": null,
              "rendered": "Pod workload degraded",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "Envoy health failure",
              },
              "ref": null,
              "rendered": "Envoy health failure",
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`HealthIndicator renders healthy 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthIndicator
    health={
      AppHealth {
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
        "items": Array [
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "A: 1 / 1",
              },
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "B: 2 / 2",
              },
            ],
            "status": Object {
              "color": "#3f9c35",
              "icon": "ok",
              "name": "Healthy",
              "priority": 1,
            },
            "title": "Workload Status",
          },
          Object {
            "status": Object {
              "color": "#3f9c35",
              "icon": "ok",
              "name": "Healthy",
              "priority": 1,
            },
            "text": "1 / 1",
            "title": "Envoy Health",
          },
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "text": "Inbound: No requests",
              },
              Object {
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "text": "Outbound: No requests",
              },
            ],
            "status": Object {
              "color": "#72767b",
              "name": "No health information",
              "priority": 0,
              "text": "N/A",
            },
            "title": "Error Rate over last 10 min",
          },
        ],
        "rateInterval": 600,
        "requests": Object {
          "errorRatio": -1,
          "inboundErrorRatio": -1,
          "outboundErrorRatio": -1,
        },
        "workloadStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 1,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
      }
    }
    id="svc"
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <HealthDetails
        headline="Healthy"
        health={
          AppHealth {
            "envoy": Object {
              "healthy": 1,
              "total": 1,
            },
            "items": Array [
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#3f9c35",
                      "icon": "ok",
                      "name": "Healthy",
                      "priority": 1,
                    },
                    "text": "A: 1 / 1",
                  },
                  Object {
                    "status": Object {
                      "color": "#3f9c35",
                      "icon": "ok",
                      "name": "Healthy",
                      "priority": 1,
                    },
                    "text": "B: 2 / 2",
                  },
                ],
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "title": "Workload Status",
              },
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "1 / 1",
                "title": "Envoy Health",
              },
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Inbound: No requests",
                  },
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Outbound: No requests",
                  },
                ],
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "title": "Error Rate over last 10 min",
              },
            ],
            "rateInterval": 600,
            "requests": Object {
              "errorRatio": -1,
              "inboundErrorRatio": -1,
              "outboundErrorRatio": -1,
            },
            "workloadStatuses": Array [
              Object {
                "available": 1,
                "name": "A",
                "replicas": 1,
              },
              Object {
                "available": 2,
                "name": "B",
                "replicas": 2,
              },
            ],
          }
        }
        id="svc"
        placement={undefined}
      >
        <Icon
          className="health-icon"
          name="ok"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          tabIndex="0"
          type="pf"
        />
      </HealthDetails>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Icon
          className="health-icon"
          name="ok"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          tabIndex="0"
          type="pf"
        />,
        "headline": "Healthy",
        "health": AppHealth {
          "envoy": Object {
            "healthy": 1,
            "total": 1,
          },
          "items": Array [
            Object {
              "children": Array [
                Object {
                  "status": Object {
                    "color": "#3f9c35",
                    "icon": "ok",
                    "name": "Healthy",
                    "priority": 1,
                  },
                  "text": "A: 1 / 1",
                },
                Object {
                  "status": Object {
                    "color": "#3f9c35",
                    "icon": "ok",
                    "name": "Healthy",
                    "priority": 1,
                  },
                  "text": "B: 2 / 2",
                },
              ],
              "status": Object {
                "color": "#3f9c35",
                "icon": "ok",
                "name": "Healthy",
                "priority": 1,
              },
              "title": "Workload Status",
            },
            Object {
              "status": Object {
                "color": "#3f9c35",
                "icon": "ok",
                "name": "Healthy",
                "priority": 1,
              },
              "text": "1 / 1",
              "title": "Envoy Health",
            },
            Object {
              "children": Array [
                Object {
                  "status": Object {
                    "color": "#72767b",
                    "name": "No health information",
                    "priority": 0,
                    "text": "N/A",
                  },
                  "text": "Inbound: No requests",
                },
                Object {
                  "status": Object {
                    "color": "#72767b",
                    "name": "No health information",
                    "priority": 0,
                    "text": "N/A",
                  },
                  "text": "Outbound: No requests",
                },
              ],
              "status": Object {
                "color": "#72767b",
                "name": "No health information",
                "priority": 0,
                "text": "N/A",
              },
              "title": "Error Rate over last 10 min",
            },
          ],
          "rateInterval": 600,
          "requests": Object {
            "errorRatio": -1,
            "inboundErrorRatio": -1,
            "outboundErrorRatio": -1,
          },
          "workloadStatuses": Array [
            Object {
              "available": 1,
              "name": "A",
              "replicas": 1,
            },
            Object {
              "available": 2,
              "name": "B",
              "replicas": 2,
            },
          ],
        },
        "id": "svc",
        "placement": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "health-icon",
          "name": "ok",
          "style": Object {
            "fontSize": "18px",
          },
          "tabIndex": "0",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <HealthDetails
          headline="Healthy"
          health={
            AppHealth {
              "envoy": Object {
                "healthy": 1,
                "total": 1,
              },
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "color": "#3f9c35",
                        "icon": "ok",
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "A: 1 / 1",
                    },
                    Object {
                      "status": Object {
                        "color": "#3f9c35",
                        "icon": "ok",
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "status": Object {
                    "color": "#3f9c35",
                    "icon": "ok",
                    "name": "Healthy",
                    "priority": 1,
                  },
                  "title": "Workload Status",
                },
                Object {
                  "status": Object {
                    "color": "#3f9c35",
                    "icon": "ok",
                    "name": "Healthy",
                    "priority": 1,
                  },
                  "text": "1 / 1",
                  "title": "Envoy Health",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "color": "#72767b",
                        "name": "No health information",
                        "priority": 0,
                        "text": "N/A",
                      },
                      "text": "Inbound: No requests",
                    },
                    Object {
                      "status": Object {
                        "color": "#72767b",
                        "name": "No health information",
                        "priority": 0,
                        "text": "N/A",
                      },
                      "text": "Outbound: No requests",
                    },
                  ],
                  "status": Object {
                    "color": "#72767b",
                    "name": "No health information",
                    "priority": 0,
                    "text": "N/A",
                  },
                  "title": "Error Rate over last 10 min",
                },
              ],
              "rateInterval": 600,
              "requests": Object {
                "errorRatio": -1,
                "inboundErrorRatio": -1,
                "outboundErrorRatio": -1,
              },
              "workloadStatuses": Array [
                Object {
                  "available": 1,
                  "name": "A",
                  "replicas": 1,
                },
                Object {
                  "available": 2,
                  "name": "B",
                  "replicas": 2,
                },
              ],
            }
          }
          id="svc"
          placement={undefined}
        >
          <Icon
            className="health-icon"
            name="ok"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            tabIndex="0"
            type="pf"
          />
        </HealthDetails>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Icon
            className="health-icon"
            name="ok"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            tabIndex="0"
            type="pf"
          />,
          "headline": "Healthy",
          "health": AppHealth {
            "envoy": Object {
              "healthy": 1,
              "total": 1,
            },
            "items": Array [
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#3f9c35",
                      "icon": "ok",
                      "name": "Healthy",
                      "priority": 1,
                    },
                    "text": "A: 1 / 1",
                  },
                  Object {
                    "status": Object {
                      "color": "#3f9c35",
                      "icon": "ok",
                      "name": "Healthy",
                      "priority": 1,
                    },
                    "text": "B: 2 / 2",
                  },
                ],
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "title": "Workload Status",
              },
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "1 / 1",
                "title": "Envoy Health",
              },
              Object {
                "children": Array [
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Inbound: No requests",
                  },
                  Object {
                    "status": Object {
                      "color": "#72767b",
                      "name": "No health information",
                      "priority": 0,
                      "text": "N/A",
                    },
                    "text": "Outbound: No requests",
                  },
                ],
                "status": Object {
                  "color": "#72767b",
                  "name": "No health information",
                  "priority": 0,
                  "text": "N/A",
                },
                "title": "Error Rate over last 10 min",
              },
            ],
            "rateInterval": 600,
            "requests": Object {
              "errorRatio": -1,
              "inboundErrorRatio": -1,
              "outboundErrorRatio": -1,
            },
            "workloadStatuses": Array [
              Object {
                "available": 1,
                "name": "A",
                "replicas": 1,
              },
              Object {
                "available": 2,
                "name": "B",
                "replicas": 2,
              },
            ],
          },
          "id": "svc",
          "placement": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "health-icon",
            "name": "ok",
            "style": Object {
              "fontSize": "18px",
            },
            "tabIndex": "0",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
